--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@
 } */
 .jumbotron {
   padding-top: 7rem;
-  background-color: rgb(3, 19, 90);
+  background-image: url(img/1.jpg);
+
   padding-bottom: 3rem;
 }
 
@@ -18,6 +19,24 @@
   padding-bottom: 2rem;
 }
 
+#experience {
+  padding-top: 4rem;
+  /*background-color: rgb(3, 19, 90);*/
+  padding-bottom: 3rem;
+}
+
+#achievements {
+  padding-top: 4rem;
+  background-color: rgb(3, 19, 90);
+  padding-bottom: 3rem;
+}
+
+#training {
+  padding-top: 4rem;
+  /*background-color: rgb(3, 19, 90);*/
+  padding-bottom: 3rem;
+}
+
 .isi {
   padding-top: 2rem;
   background-color: #fff;
@@ -25,5 +44,6 @@
 
 #contact {
   padding-top: 4rem;
+  background-color: rgb(3, 19, 90);
   padding-bottom: 3rem;
 }
